--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
 
     <div class="center">
-        <h1>🎉 HAPPY BIRTHDAY 🎉</h1>
+        <h1 id="typing"></h1>
         <p>Someone special is born today 💛</p>
-        <button>🎁 Surprise</button>
+        <button onclick="playMusic()">🎁 SURPRISE</button>
     </div>
 
+    <audio id="bgMusic">
+        <source src="music.mp3" type="audio/mpeg">
+    </audio>
+
+    <script src="script.js"></script>
 </body>
 </html>
