--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <div class="center">
         <h1 id="typing"></h1>
-        <p>Someone special is born today 💛</p>
-        <button onclick="playMusic()">🎁 SURPRISE</button>
+        <button id="surpriseBtn" onclick="playMusic()">🎁 SURPRISE</button>
     </div>
 
     <audio id="bgMusic">
