--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
     <div class="center">
         <h1 id="typing"></h1>
-        <button id="surpriseBtn" onclick="playMusic()">🎁 SURPRISE</button>
+        <button id="surpriseBtn" onclick="startSurprise()">🎁 SURPRISE</button>
+
+        <!-- Balloons container -->
+        <div id="balloons"></div>
+
+        <!-- Cake container -->
+        <img id="cake" src="cake.png" alt="Cake">
+
+        <!-- Text instructions -->
+        <h2 id="cakeText"></h2>
     </div>
 
     <audio id="bgMusic">
