--- a/index.html
+++ b/index.html
@@ -9,22 +9,13 @@
 
     <div class="center">
         <h1 id="typing"></h1>
-        <button id="surpriseBtn" onclick="startSurprise()">🎁 SURPRISE</button>
-
-        <!-- Balloons container -->
-        <div id="balloons"></div>
-
-        <!-- Cake container -->
-        <img id="cake" src="cake.png" alt="Cake">
-
-        <!-- Text instructions -->
-        <h2 id="cakeText"></h2>
+        <button id="surpriseBtn" onclick="goToSurprise()">🎁 SURPRISE</button>
     </div>
 
     <audio id="bgMusic">
         <source src="music.mp3" type="audio/mpeg">
     </audio>
 
-    <script src="script.js"></script>
+    <script src="typing.js"></script>
 </body>
 </html>
