--- a/surprise.html
+++ b/surprise.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Birthday Interactive Surprise</title>
+    <title>Interactive Surprise</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="center">
         <div id="balloonContainer"></div>
-        <img id="candle" src="candle.png" style="display:none; width:100px; margin-top:20px;">
-        <img id="cake" src="cake.png" style="display:none; width:250px; margin-top:20px;">
+        <img id="candle" src="candle.png" alt="Candle">
+        <img id="cake" src="cake.png" alt="Cake">
     </div>
+
     <script src="surprise.js"></script>
 </body>
 </html>
