--- a/surprise.html
+++ b/surprise.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Interactive Surprise</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="center">
-        <div id="balloonContainer"></div>
-        <img id="candle" src="candle.png" alt="Candle">
-        <img id="cake" src="cake.png" alt="Cake">
-    </div>
-
-    <script src="surprise.js"></script>
-</body>
-</html>
+<div class="center">
+    <div id="balloonContainer"></div>
+    <div id="candle" style="display:none; width:50px; height:100px; background:red; border-radius:25px; margin-top:20px;"></div>
+    <div id="cake" style="display:none; width:200px; height:100px; background:yellow; border-radius:10px; margin-top:20px;"></div>
+</div>
+<script src="surprise.js"></script>
