--- a/surprise.html
+++ b/surprise.html
@@ -1,6 +1,35 @@
-<div class="center">
-    <div id="balloonContainer"></div>
-    <div id="candle" style="display:none; width:50px; height:100px; background:red; border-radius:25px; margin-top:20px;"></div>
-    <div id="cake" style="display:none; width:200px; height:100px; background:yellow; border-radius:10px; margin-top:20px;"></div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Surprise</title>
+  <style>
+    body{
+      margin:0;
+      height:100vh;
+      background:#ffe082;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      overflow:hidden;
+    }
+    .balloon{
+      width:120px;
+      position:absolute;
+      bottom:-150px;
+      cursor:pointer;
+    }
+    #msg{
+      font-size:60px;
+      font-family:cursive;
+      display:none;
+    }
+  </style>
+</head>
+<body>
+
+<div id="msg">🎂 Cake Cut 🎂</div>
+
 <script src="surprise.js"></script>
+</body>
+</html>
