--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Birthday Surprise</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Happy Birthday</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="center">
-        <h1 id="typing"></h1>
-        <button id="surpriseBtn" onclick="goToSurprise()">🎁 SURPRISE</button>
-    </div>
 
-    <audio id="bgMusic">
-        <source src="music.mp3" type="audio/mpeg">
-    </audio>
+  <div id="typing"></div>
 
-    <script src="typing.js"></script>
+  <button id="surpriseBtn">𝓢𝓾𝓻𝓹𝓻𝓲𝓼𝓮 🎁</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
