--- a/surprise.html
+++ b/surprise.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Surprise</title>
-  <style>
-    body{
-      margin:0;
-      height:100vh;
-      background:#ffe082;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      overflow:hidden;
-    }
-    .balloon{
-      width:120px;
-      position:absolute;
-      bottom:-150px;
-      cursor:pointer;
-    }
-    #msg{
-      font-size:60px;
-      font-family:cursive;
-      display:none;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Surprise</title>
+
+<style>
+body{
+  margin:0;
+  height:100vh;
+  background:#ffe082;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow:hidden;
+  font-family:cursive;
+}
+
+/* balloons */
+.balloon{
+  width:120px;
+  position:absolute;
+  bottom:-150px;
+  cursor:pointer;
+  transition: transform 1s ease;
+}
+
+/* cake text */
+#cake{
+  font-size:70px;
+  display:none;
+}
+</style>
 </head>
+
 <body>
 
-<div id="msg">🎂 Cake Cut 🎂</div>
+<div id="cake">🎂 Cake Cut 🎂</div>
 
 <script src="surprise.js"></script>
 </body>
