--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Happy Birthday</title>
+  <title>Birthday</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="typing"></div>
+<div id="birthdayText"></div>
 
-  <button id="surpriseBtn">𝓢𝓾𝓻𝓹𝓻𝓲𝓼𝓮 🎁</button>
+<button id="surpriseBtn">✨ 𝓢𝓾𝓻𝓹𝓻𝓲𝓼𝓮 ✨</button>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
