--- a/surprise.html
+++ b/surprise.html
@@ -15,36 +15,26 @@ body{
   align-items:center;
   flex-direction:column;
   font-family:cursive;
-  cursor:pointer;
 }
 
-/* TAP SCREEN */
-#tapScreen{
-  color:white;
-  font-size:50px;
-  text-shadow:0 0 20px red;
-  animation:pulse 1s infinite;
-}
-
-@keyframes pulse{
-  0%{opacity:1;}
-  50%{opacity:0.5;}
-  100%{opacity:1;}
-}
-
-/* CRACK EFFECT */
-.crack{
+/* BLAST PARTICLE */
+.particle{
   position:absolute;
-  width:100%;
-  height:100%;
-  background:url("https://i.imgur.com/7QKQZ8K.png") center/cover no-repeat;
-  opacity:0;
-  animation:crackAnim 0.5s forwards;
+  width:6px;
+  height:6px;
+  border-radius:50%;
+  animation: explode 0.8s ease-out forwards;
 }
 
-@keyframes crackAnim{
-  from{opacity:0;}
-  to{opacity:1;}
+@keyframes explode{
+  from{
+    transform:translate(0,0);
+    opacity:1;
+  }
+  to{
+    transform:translate(var(--x),var(--y));
+    opacity:0;
+  }
 }
 
 /* FINAL SCREEN */
@@ -67,7 +57,7 @@ body{
   font-size:60px;
   color:white;
   text-shadow:0 0 10px yellow,0 0 20px orange,0 0 40px gold;
-  animation:glow 2s infinite alternate;
+  animation: glow 2s infinite alternate;
 }
 
 @keyframes glow{
@@ -80,7 +70,7 @@ body{
   width:320px;
   border-radius:20px;
   box-shadow:0 0 50px hotpink;
-  animation:zoom 4s infinite alternate;
+  animation: zoom 4s infinite alternate;
 }
 
 @keyframes zoom{
@@ -108,8 +98,6 @@ body{
 
 <body>
 
-<div id="tapScreen">💥 Tap To Open 💥</div>
-
 <div id="final">
   <div class="title">✨ Happy Birthday ✨</div>
   <img src="yourPhoto.jpg" class="photo">
@@ -121,25 +109,31 @@ body{
 
 <script>
 
-let tapped=false;
+/* FIRECRACKER BLAST ON LOAD */
+window.onload = function(){
 
-document.body.onclick=function(){
-  if(tapped) return;
-  tapped=true;
+  let centerX = window.innerWidth/2;
+  let centerY = window.innerHeight/2;
 
-  // Crack Effect
-  let crack=document.createElement("div");
-  crack.className="crack";
-  document.body.appendChild(crack);
+  for(let i=0;i<40;i++){
+    let p=document.createElement("div");
+    p.className="particle";
+    p.style.background="hsl("+Math.random()*360+"deg,100%,50%)";
+    p.style.left=centerX+"px";
+    p.style.top=centerY+"px";
+    p.style.setProperty('--x',(Math.random()*400-200)+"px");
+    p.style.setProperty('--y',(Math.random()*400-200)+"px");
+    document.body.appendChild(p);
 
-  // After 0.6 sec show final screen
+    setTimeout(()=>{p.remove();},800);
+  }
+
+  // Show final screen after blast
   setTimeout(()=>{
-    document.getElementById("tapScreen").style.display="none";
     document.getElementById("final").style.display="flex";
     document.getElementById("song").play();
-    crack.remove();
 
-    // Start Star Rain
+    // Star rain start
     setInterval(()=>{
       let star=document.createElement("div");
       star.className="star";
@@ -149,7 +143,8 @@ document.body.onclick=function(){
       setTimeout(()=>{star.remove();},5000);
     },150);
 
-  },600);
+  },900);
+
 };
 
 </script>
