--- a/surprise.html
+++ b/surprise.html
@@ -2,128 +2,69 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Birthday Surprise</title>
+<title>Surprise</title>
 
 <style>
 body{
-  margin:0;
-  padding:0;
-  background:black;
-  overflow:hidden;
-  font-family:Arial;
-  text-align:center;
-  color:white;
+    margin:0;
+    padding:0;
+    background:linear-gradient(to top,#1a0026,#330066);
+    overflow:hidden;
+    text-align:center;
+    font-family:cursive;
 }
 
-/* First Page */
-#page1{
-  position:absolute;
-  width:100%;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  background:linear-gradient(45deg,#000000,#1a1a1a);
-}
-
-.sunflower{
-  font-size:80px;
-  animation:rotate 5s linear infinite;
-}
-
-@keyframes rotate{
-  100%{transform:rotate(360deg);}
-}
-
-button{
-  padding:15px 30px;
-  font-size:20px;
-  border:none;
-  border-radius:10px;
-  background:gold;
-  cursor:pointer;
-}
-
-/* Second Page */
-#page2{
-  display:none;
-  position:absolute;
-  width:100%;
-  height:100%;
-}
-
+/* Heading */
 h1{
-  margin-top:40px;
-  font-size:40px;
-  color:yellow;
-  text-shadow:0 0 20px gold;
-  animation:glow 1.5s infinite alternate;
+    margin-top:40px;
+    font-size:55px;
+    color:white;
+    text-shadow:0 0 15px pink,0 0 30px cyan;
 }
 
-@keyframes glow{
-  from{text-shadow:0 0 10px gold;}
-  to{text-shadow:0 0 30px orange;}
-}
-
+/* Photo */
 .photo{
-  margin-top:20px;
-  width:250px;
-  border-radius:20px;
-  box-shadow:0 0 20px white;
+    margin-top:30px;
+    width:280px;
+    border-radius:20px;
+    box-shadow:0 0 25px white;
 }
 
-/* Star fall animation */
+/* Star fall */
 .star{
-  position:absolute;
-  width:3px;
-  height:15px;
-  background:white;
-  animation:fall linear infinite;
+    position:absolute;
+    width:3px;
+    height:3px;
+    background:white;
+    border-radius:50%;
+    animation:fall linear infinite;
 }
 
 @keyframes fall{
-  from{transform:translateY(-100px);}
-  to{transform:translateY(100vh);}
+    from{transform:translateY(-10px);}
+    to{transform:translateY(100vh);}
 }
 </style>
-
 </head>
+
 <body>
 
-<!-- First Page -->
-<div id="page1">
-  <div class="sunflower">🌻</div>
-  <h2>Click for Surprise</h2>
-  <button onclick="startSurprise()">Surprise 🎉</button>
-</div>
+<h1>🎉 Happy Birthday 🎉</h1>
 
-<!-- Second Page -->
-<div id="page2">
-  <h1>🎉 Happy Birthday Bhai 🎉</h1>
-  <img src="photo.jpg" class="photo">
-  <audio id="song" src="song.mp3"></audio>
-</div>
+<img src="yourPhoto.jpg" class="photo">
+
+<audio autoplay>
+    <source src="song.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-
-function startSurprise(){
-  document.getElementById("page1").style.display="none";
-  document.getElementById("page2").style.display="block";
-  document.getElementById("song").play();
-  createStars();
-}
-
-function createStars(){
-  for(let i=0;i<100;i++){
-    let star = document.createElement("div");
+for(let i=0;i<80;i++){
+    let star=document.createElement("div");
     star.className="star";
-    star.style.left=Math.random()*100+"%";
-    star.style.animationDuration=(Math.random()*2+2)+"s";
+    star.style.left=Math.random()*100+"vw";
+    star.style.animationDuration=(2+Math.random()*3)+"s";
     document.body.appendChild(star);
-  }
 }
-
 </script>
 
 </body>
