--- a/index.html
+++ b/index.html
@@ -1,54 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>Happy Birthday</title>
-
-<style>
-body{
-    margin:0;
-    padding:0;
-    text-align:center;
-    font-family:cursive;
-    background:url("sunflower.jpg");
-    background-size:cover;
-    background-position:center;
-}
-
-h1{
-    margin-top:150px;
-    font-size:60px;
-    color:white;
-    text-shadow:0 0 20px pink,0 0 40px yellow;
-}
-
-button{
-    margin-top:40px;
-    padding:15px 40px;
-    font-size:28px;
-    border:none;
-    border-radius:10px;
-    background:blue;
-    color:white;
-    cursor:pointer;
-    box-shadow:0 0 20px cyan;
-}
-button:hover{
-    transform:scale(1.1);
-}
-</style>
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>𝓗𝓪𝓹𝓹𝔂 𝓑𝓲𝓻𝓽𝓱𝓭𝓪𝔂</h1>
+<div id="birthdayText"></div>
+<button id="surpriseBtn">✨ 𝓢𝓾𝓻𝓹𝓻𝓲𝓼𝓮 ✨</button>
 
-<button onclick="go()">✨ Surprise ✨</button>
-
-<script>
-function go(){
-    window.location.href="surprise.html";
-}
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
